--- a/mobday/analise.html
+++ b/mobday/analise.html
@@ -39,6 +39,24 @@ function sendDolorEvent(){
         eventLabel: 'Dolor'
     });
 }
+
+function sendContactEvent(){
+    ga('send', {
+        hitType: 'event',
+        eventCategory: 'menu',
+        eventAction: 'entre_em_contato',
+        eventLabel: 'link_externo'
+    });
+}
+
+function sendDownloadEvent(){
+    ga('send', {
+        hitType: 'event',
+        eventCategory: 'menu',
+        eventAction: 'download_pdf',
+        eventLabel: 'download_pdf'
+    });
+}
 </script>
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
@@ -149,5 +167,14 @@ function sendDolorEvent(){
             buttons[i].addEventListener('click', sendDolorEvent, false);
         }
     }
+    
+    var download_array = document.getElementsByClassName('menu-lista-download');
+    for (var i = 0; i < download_array.length; i++) {
+        download_array[i].addEventListener('click', sendDownloadEvent, false);
+    }
+    
+    var contact_array = document.getElementsByClassName('menu-lista-contato');
+    for (var i = 0; i < download_array.length; i++) {
+        contact_array[i].addEventListener('click', sendContactEvent, false);
 </script>
 </html>
