--- a/mobday/sobre.html
+++ b/mobday/sobre.html
@@ -199,6 +199,11 @@ function sendDownloadEvent(){
         download_array[i].addEventListener('click', sendDownloadEvent, false);
     }
 
+    var download_array = document.getElementsByClassName('menu-lista-download');
+    for (var i = 0; i < download_array.length; i++) {
+        download_array[i].addEventListener('click', sendDownloadEvent, false);
+    }
+    
     var contact_array = document.getElementsByClassName('menu-lista-contato');
     for (var i = 0; i < download_array.length; i++) {
         contact_array[i].addEventListener('click', sendContactEvent, false);
